force-app/main/default/objects/RD_Manufacturing_Document_Detail__c/RD_Manufacturing_Document_Detail__c.object-meta.xml
<CustomObject>
    <label>RD ManufacturingDocument Detail</label>
    <nameField>
        <label>RD ManufacturingDocument Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ManufacturingDocument Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>