force-app/main/default/objects/RD_Manufacturing_Document_Detail__c/fields/DimC__c.field-meta.xml
<CustomField>
    <fullName>DimC__c</fullName>
    <label>DimC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>