force-app/main/default/objects/RD_Manufacturing_Document_Detail__c/fields/DimF__c.field-meta.xml
<CustomField>
    <fullName>DimF__c</fullName>
    <label>DimF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>