force-app/main/default/objects/RD_Manufacturing_Document_Detail__c/fields/DWGNO__c.field-meta.xml
<CustomField>
    <fullName>DWGNO__c</fullName>
    <label>DWGNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>