force-app/main/default/objects/RD_Manufacturing_Document_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>NumVal1__c</columns>
    <columns>NumVal2__c</columns>
    <columns>Revision__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>DrawingID__c</columns>
    <columns>DWGNO__c</columns>
    <columns>CDC_Ext_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DWGNO__c</field>
        <operation>equals</operation>
        <value>MNX-XXXX-FS-XXXXXX (1 OF 2)</value>
    </filters>
    <label>All</label>
</ListView>